--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 } 
 
 html {
+    letter-spacing: 1.4px;
     line-height: 1.5;
     font-family: 'Shadows Into Light Two', cursive;
     font-weight: normal;
@@ -37,6 +38,7 @@ html {
 }
 
 input {
+    letter-spacing: 2px;
     background-color: transparent;
     border: none;
     border-bottom: 1px solid #9e9e9e;
