--- a/scss/main.scss
+++ b/scss/main.scss
@@ -84,7 +84,7 @@ input:focus {
 
 .collection {
     margin: 10px auto;
-    border: 1px solid #e0e0e0;
+    border: .5px solid #e0e0e0;
     border-radius: 2px;
     overflow: hidden;
     position: relative;
@@ -94,12 +94,12 @@ input:focus {
 .collection,
 .collection-item {
     margin: 10px auto;
-    border-bottom: 1px solid #9e9e9e;
+    border-bottom: .5px solid #d8d7d7;
     max-width: 600px;
     padding: 0 1px;
     text-align: left;
     list-style: none;
-    padding: 2px;
+    padding-left: 10px;
 }
 
 /*------------------------------*/
