--- a/scss/main.scss
+++ b/scss/main.scss
@@ -94,7 +94,7 @@ input:focus {
 .collection,
 .collection-item {
     margin: 10px auto;
-    border-bottom: .5px solid #d8d7d7;
+    border-bottom: .5px solid #e0e0e0;
     max-width: 600px;
     padding: 0 1px;
     text-align: left;
