--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,6 +43,15 @@ html {
 .task-features {
     list-style: none;
     margin: 10px 0;
+    
+    li:first-child {
+        border-bottom: none;
+    }
+    li {
+        display: block;
+        padding: 10px;
+        border: 0.3px solid #9e9e9e;
+    }
 }
 
 
@@ -64,6 +73,10 @@ html {
     }
 }
 
+label {
+    color: #4eaaad;
+}
+
 .task-rating {
     padding: 5px;
     margin: 0 auto;
@@ -71,7 +84,7 @@ html {
     span {
         font-size: 16px;
         font-weight: 400;
-        color: #c5625f;
+        color: #c7c94a;
     }
     &:after {
         display: block;
@@ -94,7 +107,7 @@ html {
     padding: 10px;
     width:60%;
     margin: 0 auto;
-    border: 1px dotted #3f3f3f;
+   
 }
 
 .btn {
@@ -124,7 +137,7 @@ html {
     position: relative;
 }
 .fa-filter {
-    color: #c5625f;
+    color: #4eaaad;
 }
 
 .filter-icon {
