--- a/scss/main.scss
+++ b/scss/main.scss
@@ -79,7 +79,6 @@ label {
 
 .task-rating {
     padding: 5px;
-    margin: 0 auto;
     border-radius: 4px;
     span {
         font-size: 16px;
@@ -96,7 +95,7 @@ label {
 .till {
     border: 1px solid gray;
     padding: 0 10px;
-    margin: 0 10px;
+    margin: 5px 0;
 }
 
 .title {
