--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,7 +12,8 @@ html {
     font-weight: normal;
     color: #2b2b2b;
     font-size: 18px;
-    background-color: #e0e0e0;
+    background-image: url(../img/ep_naturalwhite.png);//from subtelpatterns little bit modified
+    background-repeat: repeat;
 }
 
 .container {
@@ -21,10 +22,37 @@ html {
     width: 90%;
 }
 
-@media only screen and (min-width: 601px) {
-    .container {
-        width: 85%;
-    }
+.btn {
+    text-decoration: none;
+    color: #fff;
+    background-color: #3f3f3f;
+    text-align: center;
+    letter-spacing: .5px;
+    cursor: pointer;
+    font-size: 1rem;
+    outline-color: gray;
+    border: none;
+    border-radius: 2px;
+    display: inline-block;
+    height: 36px;
+    line-height: 36px;
+    padding: 0 2rem;
+    text-transform: uppercase;
+    font-family: 'Shadows Into Light Two', cursive;
+}
+
+.btn:hover {
+    opacity: 0.8;
+}
+
+/*------------------------------*/
+/*---- Task form container ----*/
+/*------------------------------*/
+.task-form-border {
+    padding: 10px;
+    width:60%;
+    margin: 0 auto;
+   
 }
 
 .task-form,
@@ -34,12 +62,13 @@ html {
     padding: 10px;
     margin: 10px auto;
     text-align: center;
-    background-color: #f8f8f8;
+    background-color: #f5f5f5;
 }
 
-.checked {
-    color: #289F8C;
-}
+/*------------------------------*/
+/*---- Task form items ----*/
+/*------------------------------*/
+
 .task-features {
     list-style: none;
     margin: 10px 0;
@@ -51,6 +80,10 @@ html {
         border: 0.3px solid #9e9e9e;
     }
 }
+
+/*------------------------------*/
+/*---- Inputs ----*/
+/*------------------------------*/
 
 .task-features-display{
     display: inline;
@@ -77,47 +110,11 @@ label {
     color: #4eaaad;
 }
 
-
-.till {
-    border: 1px solid gray;
-    padding: 0 10px;
-    margin: 5px 0;
-}
-
-.title {
-    text-transform: uppercase;
-}
-
-.task-form-border {
-    padding: 10px;
-    width:60%;
-    margin: 0 auto;
-   
-}
-
-
-
-.btn {
-    text-decoration: none;
-    color: #fff;
-    background-color: #3f3f3f;
-    text-align: center;
-    letter-spacing: .5px;
-    cursor: pointer;
-    font-size: 1rem;
-    outline-color: gray;
-    border: none;
-    border-radius: 2px;
-    display: inline-block;
-    height: 36px;
-    line-height: 36px;
-    padding: 0 2rem;
-    text-transform: uppercase;
-    font-family: 'Shadows Into Light Two', cursive;
-}
-
-.btn:hover {
-    opacity: 0.8;
+/*------------------------------*/
+/*---- Filter box ----*/
+/*------------------------------*/
+.checked {
+    color: #289F8C;
 }
 
 .filter-box {
@@ -135,13 +132,14 @@ label {
     list-style: none;
     text-align: left;
     position: absolute;
-    border-radius: 8px;
-    border: 1px solid #5a978e;
+    border-radius: 2px;
+    background-color: #8fcec4;
     padding: 5px;
     top: 50px;
     right: 105px;
     opacity:0;
     visibility: hidden;
+    z-index: 1;
     transition: 0.5s opacity;
 
 }
@@ -151,10 +149,8 @@ label {
     visibility: visible;
 }
 
-
-
 /*------------------------------*/
-/*---- list for new task from JS ----*/
+/*---- list for new task ----*/
 /*------------------------------*/
 .collection {
     margin: 10px auto;
@@ -176,12 +172,26 @@ label {
     padding-left: 10px;
 }
 
-.completed {
-    background: grey;
+.till {
+    border: 1px solid gray;
+    padding: 0 10px;
+    margin: 5px 0;
+}
+
+.title {
+    text-transform: uppercase;
 }
 
 /*------------------------------*/
-/*---- taks deleting link ----*/
+/*---- Task completed ----*/
+/*------------------------------*/
+
+.completed {
+    background: #e4f1ef;
+}
+
+/*------------------------------*/
+/*---- Task deleting link ----*/
 /*------------------------------*/
 .task-complete,
 .task-delete {
@@ -189,5 +199,19 @@ label {
     font-size: 17px;
     color: #3f3f3f;
     float: right;
-
 }
+
+/*------------------------------*/
+/*---- Media queries ----*/
+/*------------------------------*/
+@media only screen and (min-width: 601px) {
+    .container {
+        width: 85%;
+    }
+}
+
+@media only screen and (max-width: 770px) { 
+    .task-form-border {
+        width: 90%;
+    }
+ }
