--- a/scss/main.scss
+++ b/scss/main.scss
@@ -127,10 +127,10 @@ label {
 .filter-button {
     text-decoration: none;
 }
-.filter {
-    width: 25%;
-}
 
+#filter {
+    width: 30%;
+}
 .filter-list {
     list-style: none;
     text-align: left;
